2012-12-05  Andreas Kling  <akling@apple.com>

        REGRESSION(r136615): Incorrect style sharing in view-source documents.
        <http://webkit.org/b/104089>

        Reviewed by Antti Koivisto.

        Unskip: fast/frames/viewsource-attribute.html
                fast/frames/viewsource-on-image-file.html

        * platform/chromium/TestExpectations:
        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac/TestExpectations:
        * platform/qt/TestExpectations:

2012-12-05  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed gardening.

        Removing redundant pixel and render tree baselines for fast/media tests.
        This is the second and last patch covering non-Chromium ports.

        Too many files to list.

2012-12-05  Roger Fong  <roger_fong@apple.com>

        Unreviewed rebaseline on Windows after r136640.

        * platform/win/fast/text/orientation-sideways-expected.txt: Added.

2012-12-05  Roger Fong  <roger_fong@apple.com>

        Unreviewed rebaseline.
        https://bugs.webkit.org/show_bug.cgi?id=98209.

        * platform/win/fast/text/international/float-as-only-child-of-isolate-crash-expected.txt:

2012-12-05  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] REGRESSION: 2 tests started to fail with newer Qt5
        https://bugs.webkit.org/show_bug.cgi?id=104140

        Unreviewed gardening, skip new failing tests to paint the bots green.

        * platform/qt-5.0/TestExpectations:

2012-12-05  Robert Hogan  <robert@webkit.org>

        REGRESSION(r126683): Table cell are getting borders when the style doesn't mention any
        https://bugs.webkit.org/show_bug.cgi?id=101677

        Reviewed by Julien Chaffraix.

        * fast/table/td-bordercolor-attribute-expected.txt: Added.
        * fast/table/td-bordercolor-attribute.html: Added.

2012-12-05  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed gardening.
