@@ -1,0 +1,5 @@
+<html>
+<body>
+<p style="color: green">This text should be green. If running in a build of WebKit with 3d transforms, it will appear red (and this should not happen while 3d is not supported)</p>
+</body>
+</html>
