@@ -1,0 +1,5 @@
+<html>
+<body>
+<p style="color: green">This text should be green if running in a build of WebKit with support for 2d but not 3d transforms.</p>
+</body>
+</html>
