@@ -1,3 +1,14 @@
+2012-12-05  Zan Dobersek  <zandobersek@gmail.com>
+
+        Unreviewed GTK gardening.
+
+        Adding GTK-specific reference files for two fast/media tests after r136708.
+        The GTK port isn't yet supporting 3D transforms so these two reference files
+        should reflect that.
+
+        * platform/gtk/fast/media/mq-transform-02-expected.html: Added.
+        * platform/gtk/fast/media/mq-transform-03-expected.html: Added.
+
 2012-12-05  Andreas Kling  <akling@apple.com>
 
         REGRESSION(r136615): Incorrect style sharing in view-source documents.
